--- a/demos/card_rendering/draw_cards.html
+++ b/demos/card_rendering/draw_cards.html
@@ -14,6 +14,22 @@
   var greenColor = "#009900";
   var redColor = "#FF0000";
 
+  /**
+   * Card
+   */
+  class Card
+  {
+    constructor ()
+    {
+      // TODO: Set the properties of the card.
+    }
+
+    draw(context)
+    {
+
+    }
+  }
+
   function calcMouseEvent(event)
   {
      return {
