Class for token drawing

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -10,9 +10,13 @@
       margin: 0;
     }
   </style>
-  <script type="text/javascript" src="classes/Cards.js"></script>
+  <script type="text/javascript" src="data/cards.js"></script>
+  <script type="text/javascript" src="classes/Card.js"></script>
+  <script type="text/javascript" src="classes/PanelElement.js"></script>
+  <script type="text/javascript" src="classes/Token.js"></script>
+  <script type="text/javascript" src="classes/TokenPanel.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <body onload="initialize()">
-    <canvas id="my-canvas" width="800" height="600"> </canvas>
+    <canvas id="my-canvas" width="1920" height="1080"> </canvas>
   </body>
 </html>
