--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="classes/Token.js"></script>
   <script type="text/javascript" src="classes/TokenPanel.js"></script>
   <script type="text/javascript" src="main.js"></script>
+  <script type="text/javascript" src="classes/Board.js"></script>
   <body onload="initialize()">
     <canvas id="my-canvas" width="1920" height="1080"> </canvas>
   </body>
