--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="classes/Board.js"></script>
   <body onload="initialize()">
-    <canvas id="my-canvas" width="1920" height="1080"> </canvas>
+    <canvas id="my-canvas" width="1920" height="1080"></canvas>
+    <img id="scream" width="220" height="277" src="images/deck.png" />
   </body>
 </html>
