Changed the deck images

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -19,6 +19,23 @@
   <script type="text/javascript" src="classes/Board.js"></script>
   <body onload="initialize()">
     <canvas id="my-canvas" width="1920" height="1080"></canvas>
-    <img id="scream" width="220" height="277" src="images/deck.png" />
+    <img
+      id="level1_deck"
+      width="220"
+      height="277"
+      src="images/level1_deck.png"
+    />
+    <img
+      id="level2_deck"
+      width="220"
+      height="277"
+      src="images/level2_deck.png"
+    />
+    <img
+      id="level3_deck"
+      width="220"
+      height="277"
+      src="images/level3_deck.png"
+    />
   </body>
 </html>
