--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -14,37 +14,38 @@
       background-size: cover;
       background-image: url("images/background2.jpg");
     }
-
   </style>
   <script type="text/javascript" src="data/cards.js"></script>
+  <script type="text/javascript" src="classes/RoundedRectangle.js"></script>
+  <script type="text/javascript" src="classes/Shuffle.js"></script>
   <script type="text/javascript" src="classes/Card.js"></script>
   <script type="text/javascript" src="classes/PanelElement.js"></script>
   <script type="text/javascript" src="classes/Token.js"></script>
   <script type="text/javascript" src="classes/TokenPanel.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="classes/Board.js"></script>
-  
+
   <body onload="initialize()">
     <canvas id="my-canvas" width="1920" height="969"></canvas>
-    <div style="display:none">
-    <img
-      id="level1_deck"
-      width="220"
-      height="277"
-      src="images/level1_deck.png"
-    />
-    <img
-      id="level2_deck"
-      width="220"
-      height="277"
-      src="images/level2_deck.png"
-    />
-    <img
-      id="level3_deck"
-      width="220"
-      height="277"
-      src="images/level3_deck.png"
-    />
+    <div style="display: none">
+      <img
+        id="level1_deck"
+        width="220"
+        height="277"
+        src="images/level1_deck.png"
+      />
+      <img
+        id="level2_deck"
+        width="220"
+        height="277"
+        src="images/level2_deck.png"
+      />
+      <img
+        id="level3_deck"
+        width="220"
+        height="277"
+        src="images/level3_deck.png"
+      />
     </div>
   </body>
 </html>
