Started the logic of the game

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -25,7 +25,7 @@
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="classes/Board.js"></script>
 
-  <body onload="initialize()">
+  <body onload="initialize()" onresize="resize()">
     <canvas id="my-canvas" width="1920" height="969"></canvas>
     <div style="display: none">
       <img
