--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -12,7 +12,7 @@
     canvas#my-canvas {
       background-repeat: no-repeat;
       background-size: cover;
-      background-image: url("images/background2.jpg");
+      background-image: url("images/background.jpg");
     }
   </style>
   <script type="text/javascript" src="data/cards.js"></script>
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="classes/Board.js"></script>
 
   <body onload="initialize()" onresize="resize()">
-    <canvas id="my-canvas" width="1920" height="1080"></canvas>
+    <canvas id="my-canvas" width="1920" height="1000"></canvas>
     <div style="display: none">
       <img
         id="level1_deck"
