Started the the player switch method

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="data/cards.js"></script>
   <script type="text/javascript" src="classes/RoundedRectangle.js"></script>
   <script type="text/javascript" src="classes/Shuffle.js"></script>
+  <script type="text/javascript" src="classes/Player.js"></script>
   <script type="text/javascript" src="classes/Card.js"></script>
   <script type="text/javascript" src="classes/PanelElement.js"></script>
   <script type="text/javascript" src="classes/Token.js"></script>
