--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -1,20 +1,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <style>
-    html,
-    body {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-    }
-    canvas#my-canvas {
-      background-repeat: no-repeat;
-      background-size: cover;
-      background-image: url("images/background.jpg");
-    }
-  </style>
   <script type="text/javascript" src="data/cards.js"></script>
   <script type="text/javascript" src="classes/RoundedRectangle.js"></script>
   <script type="text/javascript" src="classes/Shuffle.js"></script>
@@ -28,7 +16,7 @@
 
   <body onload="initialize()" onresize="resize()">
     <canvas id="my-canvas" width="1920" height="1000"></canvas>
-    <div style="display: none">
+    <div class="hidden">
       <img
         id="level1_deck"
         width="220"
@@ -47,6 +35,57 @@
         height="277"
         src="images/level3_deck.png"
       />
+      <img
+        id="player_icon"
+        width="50"
+        height="50"
+        src="images/player_icon.png"
+      />
+      <img id="AI_icon" width="50" height="50" src="images/AI_icon.png" />
     </div>
+
+    <div class="overlay hidden"></div>
+
+    <button class="rules_btn">Játékszabályok</button>
+
+    <div class="rules hidden">
+      <div class="rule_title">JÁTÉKSZABÁLYOK</div>
+      <br />
+      Saját körében a játékos egyetlen cselekvést hajt végre az alábbi 3
+      lehetőség közül:
+      <div class="list">
+        <ul>
+          <li>Elvesz 3 különböző színű zsetont az ékkő halmokból.</li>
+          <li>
+            Elvesz 2 azonos színű zsetont egy ékkő halomból (ez azonban csak
+            akkor lehetséges, ha legalább 4 zseton van abban a halomban, amikor
+            a játékos elveszi őket).
+          </li>
+          <li>
+            Megvásárol a középen képpel felfelé található fejlődéskártyák közül
+            egyet.
+          </li>
+        </ul>
+      </div>
+      <p>A kártyavásárlás:</p>
+      Egy kártya megvásárlásához a játékosnak a kártyán látható mennyiségű
+      zsetont el kell költenie. Az elköltött zsetonok a játéktéren lévő halmokba
+      kerülnek vissza.
+      <p>A bónuszok:</p>
+      A korábban megvásárolt fejlődéskártyák bónuszai lehetővé teszik a
+      következő körökben új fejlődéskártyák kevesebb költségen történő
+      megvásárlását. A kártyákon található bónusz színe egyenértékű ugyanazon
+      szín egy zsetonjával. Amennyiben a játékosnak elegendő mennyiségű bónusz
+      áll rendelkezésére, akkor akár ingyen is vásárolhat fejlődéskártyát.
+      <p>A játék vége:</p>
+      Amikor egy játékos megszerzi a 15. tekintély pontját, azonnal véget ér a
+      játék.
+    </div>
+
+    <div class="human win_subtitle hidden">🎉Nyertél!🎉</div>
+
+    <div class="ai win_subtitle hidden">🎉A számítógép nyert!🎉</div>
+
+    <button class="new_game hidden">Új játék</button>
   </body>
 </html>
