New game button
Esthetic changes

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -46,6 +46,8 @@
 
     <div class="overlay hidden"></div>
 
+    <button class="new_game" id="during_game_btn">Új játék</button>
+
     <button class="rules_btn">Játékszabályok</button>
 
     <div class="rules hidden">
@@ -86,6 +88,6 @@
 
     <div class="ai win_subtitle hidden">🎉A számítógép nyert!🎉</div>
 
-    <button class="new_game hidden">Új játék</button>
+    <button class="new_game hidden" id="end_screen_btn">Új játék</button>
   </body>
 </html>
