Created a basic AI

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -11,6 +11,7 @@
   <script type="text/javascript" src="classes/PanelElement.js"></script>
   <script type="text/javascript" src="classes/Token.js"></script>
   <script type="text/javascript" src="classes/TokenPanel.js"></script>
+  <script type="text/javascript" src="classes/Button.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="classes/Board.js"></script>
 
@@ -45,10 +46,6 @@
     </div>
 
     <div class="overlay hidden"></div>
-
-    <button class="new_game" id="during_game_btn">Új játék</button>
-
-    <button class="rules_btn">Játékszabályok</button>
 
     <div class="rules hidden">
       <div class="rule_title">JÁTÉKSZABÁLYOK</div>
