--- a/demos/card_rendering/simulator.html
+++ b/demos/card_rendering/simulator.html
@@ -1,8 +1,16 @@
 <html>
-    <head>
-    
-    </head>
-    <body>
-        <script type="text/javascript" src="simulator.js"></script>
-    </body>
+  <head>
+    <script type="text/javascript" src="simulator.js"></script>
+    <script type="text/javascript" src="data/cards.js"></script>
+    <script type="text/javascript" src="classes/RoundedRectangle.js"></script>
+    <script type="text/javascript" src="classes/Shuffle.js"></script>
+    <script type="text/javascript" src="classes/Player.js"></script>
+    <script type="text/javascript" src="classes/Card.js"></script>
+    <script type="text/javascript" src="classes/PanelElement.js"></script>
+    <script type="text/javascript" src="classes/Token.js"></script>
+    <script type="text/javascript" src="classes/TokenPanel.js"></script>
+    <script type="text/javascript" src="classes/Button.js"></script>
+    <script type="text/javascript" src="classes/Board.js"></script>
+  </head>
+  <body onload="initialize()"></body>
 </html>
