Correct grammatical error

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -48,7 +48,7 @@
     <div class="overlay hidden"></div>
 
     <div class="hidden subtitle" id="select_players">
-      Válasz ki a játékosokat!
+      Válaszd ki a játékosokat!
     </div>
 
     <button class="human_vs_AI_btn hidden" id="human_vs_AI_btn">
