Started the documentation
Graphs
Corrections of the game

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -88,7 +88,8 @@
         következő körökben új fejlődéskártyák kevesebb költségen történő
         megvásárlását. A kártyákon található bónusz színe egyenértékű ugyanazon
         szín egy zsetonjával. Amennyiben a játékosnak elegendő mennyiségű bónusz
-        áll rendelkezésére, akkor akár ingyen is vásárolhat fejlődéskártyát.
+        áll rendelkezésére, akkor akár ingyen is vásárolhat fejlődéskártyát. (A
+        körbekerített érték a panelen.)
         <p>A játék vége:</p>
         Amikor egy játékos megszerzi a 15. tekintély pontját, azonnal véget ér a
         játék.
