Created a new AI
Corrections
AI separations

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -14,6 +14,10 @@
   <script type="text/javascript" src="classes/Button.js"></script>
   <script type="text/javascript" src="main.js"></script>
   <script type="text/javascript" src="classes/Board.js"></script>
+  <script type="text/javascript" src="AI/firstAI.js"></script>
+  <script type="text/javascript" src="AI/secondAI.js"></script>
+  <script type="text/javascript" src="AI/thirdAI.js"></script>
+  <script type="text/javascript" src="AI/fourthAI.js"></script>
 
   <body onload="initialize()" onresize="resize()">
     <canvas id="my-canvas" width="1920" height="1000"></canvas>
