--- a/demos/card_rendering/simulator.html
+++ b/demos/card_rendering/simulator.html
@@ -11,6 +11,10 @@
     <script type="text/javascript" src="classes/TokenPanel.js"></script>
     <script type="text/javascript" src="classes/Button.js"></script>
     <script type="text/javascript" src="classes/Board.js"></script>
+    <script type="text/javascript" src="AI/firstAI.js"></script>
+    <script type="text/javascript" src="AI/secondAI.js"></script>
+    <script type="text/javascript" src="AI/thirdAI.js"></script>
+    <script type="text/javascript" src="AI/fourthAI.js"></script>
   </head>
   <body onload="initialize()"></body>
 </html>
