Created a new AI

--- a/demos/card_rendering/simulator.html
+++ b/demos/card_rendering/simulator.html
@@ -15,6 +15,7 @@
     <script type="text/javascript" src="AI/secondAI.js"></script>
     <script type="text/javascript" src="AI/thirdAI.js"></script>
     <script type="text/javascript" src="AI/fourthAI.js"></script>
+    <script type="text/javascript" src="AI/fifthAI.js"></script>
   </head>
   <body onload="initialize()"></body>
 </html>
