Fixed some errors

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="AI/secondAI.js"></script>
   <script type="text/javascript" src="AI/thirdAI.js"></script>
   <script type="text/javascript" src="AI/fourthAI.js"></script>
+  <script type="text/javascript" src="AI/fifthAI.js"></script>
 
   <body onload="initialize()" onresize="resize()">
     <canvas id="my-canvas" width="1920" height="1000"></canvas>
