Code cleaning and corrections

--- a/demos/card_rendering/index.html
+++ b/demos/card_rendering/index.html
@@ -68,7 +68,7 @@
       <div class="inner_box_of_rules">
         <div class="rule_title">JÁTÉKSZABÁLYOK</div>
         <br />
-        Saját körében a játékos egyetlen cselekvést hajt végre az alábbi 3
+        Saját körében a játékos egyetlen cselekvést hajt végre az alábbi három
         lehetőség közül:
         <div class="list">
           <ul>
